// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxArticleBanner should not render the banner 1`] = `<div />`;

exports[`MaxArticleBanner should render the banner with a warning 1`] = `
<div>
  <div
    class="banner"
  >
    <div
      class="info"
    >
      <img
        alt="warning icon"
        src="test-file-stub"
      />
      <div
        class="bannerLabel"
      >
        Your Help Center currently contains 4 articles out of 5 authorized articles. Please contact us to increase the limit.
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="button"
      >
        Contact Us
      </button>
      <button
        aria-label="close"
        class="closeBannerButton"
      >
        <i
          class="material-icons"
        >
          close
        </i>
      </button>
    </div>
  </div>
</div>
`;

exports[`MaxArticleBanner should render the banner with the max articles limitation 1`] = `
<div>
  <div
    class="banner"
  >
    <div
      class="info"
    >
      <img
        alt="warning icon"
        src="test-file-stub"
      />
      <div
        class="bannerLabel"
      >
        Each Help Center is limited to 5 articles, please contact us to increase the authorized maximum number of articles.
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="button"
      >
        Contact Us
      </button>
      <button
        aria-label="close"
        class="closeBannerButton"
      >
        <i
          class="material-icons"
        >
          close
        </i>
      </button>
    </div>
  </div>
</div>
`;
